# artemis

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  test.fish
.github/workflows/: cpp.yml  docker.yml
cmake/: EnableMakeCheck.cmake  FetchBoostAsio.cmake  FetchFortHermes.cmake  FetchFortTags.cmake  FetchFortTime.cmake  FetchFreetypeGL.cmake  FetchGoogleTest.cmake  FindAsio.cmake  FindEGrabber.cmake  FindGLog.cmake  FindGoogleMock.cmake  FindGoogleTest.cmake  FindHyperion.cmake  add_ressources.cmake  create_resources.cmake
scripts/: CMakeLists.txt
scripts/resourcify/: go.mod  main.go
src/: AcquisitionTask.cpp  AcquisitionTask.hpp  AntCataloguerProcess.cpp  AntCataloguerProcess.h  Application.cpp  Application.hpp  ApplicationTest.cpp  Apriltag2Process.cpp  Apriltag2Process.h  ApriltagDetector.cpp  ApriltagDetector.hpp  CMakeLists.txt  CameraConfiguration.cpp  CameraConfiguration.h  CommonTypes.h  Connection.cpp  Connection.h  Connection.hpp  ConnectionTest.cpp  ConnectionUTest.cpp  ConnectionUTest.h  ConnectionUTest.hpp  Defer.h  DeferUTest.cpp  DeferUTest.h  DrawDetectionProcess.cpp  DrawDetectionProcess.h  EuresysFrameGrabber.cpp  EuresysFrameGrabber.h  EuresysFrameGrabber.hpp  EventManager.cpp  EventManager.h  EventManagerUTest.cpp  EventManagerUTest.h  FileWriter.cpp  FileWriter.h  FrameDisplayer.cpp  FrameDisplayer.h  FrameGrabber.cpp  FrameGrabber.h  (+85 more)
src/artemis/: AntCataloguerProcess.cpp  AntCataloguerProcess.h  CMakeLists.txt  ChildProcess.cpp  ChildProcess.h  CommonTypes.h  Connection.cpp  Connection.h  ConnectionUTest.cpp  DrawDetectionProcess.cpp  DrawDetectionProcess.h  EuresysFrameGrabber.cpp  EuresysFrameGrabber.h  FrameGrabber.h  OutputProcess.cpp  OutputProcess.h  ProcessDefinition.cpp  ProcessDefinition.h  ProcessQueueExecuter.cpp  ProcessQueueExecuter.h  ProcessQueueExecuterUTest.h  ResizeProcess.cpp  ResizeProcess.h  RingBufferUTest.cpp  StubFrameGrabber.cpp  StubFrameGrabber.h  TagDetectionProcess.cpp  main.cpp
src/common/: CMakeLists.txt  DetectionConfig.cpp  DetectionConfig.h  InterprocessBuffer.cpp  InterprocessBuffer.h
src/hermes/: Ant.proto  CMakeLists.txt  FrameReadout.proto
src/maytags/: CMakeLists.txt  ColorLabeller.cpp  ColorLabeller.h  ComponentConnecter.cpp  ComponentConnecter.h  ComponentConnecterUTest.cpp  ComponentConnecterUTest.h  Detector.cpp  Detector.h  End2EndUTest.cpp  End2EndUTest.h  Family.cpp  Family.h  Family36h11.cpp  GradientClusterizer.cpp  GradientClusterizer.h  Graymodel.cpp  Graymodel.h  ImageResource.cpp  ImageResource.h  Implementation.cpp  Implementation.h  Profiler.h  QuadDecoder.cpp  QuadDecoder.h  QuadFitter.cpp  QuadFitter.h  QuickTagDecoder.cpp  QuickTagDecoder.h  Thresholder.cpp  Thresholder.h  ThresholderUTest.cpp  ThresholderUTest.h  main-check.cpp
src/maytags/data/: debug_clusters.pxm  debug_output.pxm  debug_preprocess.pxm  debug_quads_fixed.pxm  debug_quads_raw.pxm  debug_samples.pxm  debug_segmentation.pxm  debug_threshold.pxm
src/orion/: CMakeLists.txt  main.cpp
src/ui/: GLAsciiFontAtlas.cpp  GLAsciiFontAtlas.hpp  GLFont.cpp  GLFont.hpp  GLTextRenderer.cpp  GLTextRenderer.hpp  GLUserInterface.cpp  GLUserInterface.hpp  GLVertexBufferObject.cpp  GLVertexBufferObject.hpp  ShaderUtils.cpp  ShaderUtils.hpp  StubUserInterface.cpp  StubUserInterface.hpp  UserInterface.cpp  UserInterface.hpp  shaders_resources.cmake.in
src/ui/shaders/: circle.fragmentshader  font.fragmentshader  font.vertexshader  frame.fragmentshader  frame.vertexshader  primitive.fragmentshader  primitive.vertexshader  roi.fragmentshader
src/utils/: #FileDescriptor.h#  CMakeLists.txt  CPUMap.cpp  CPUMap.h  Defer.cpp  Defer.hpp  DeferUTest.cpp  FlagParser.cpp  FlagParser.h  FlagParserImpl.h  FlagParserUTest.cpp  FlagParserUTest.h  FlagParserUTest.hpp  Partitions.cpp  Partitions.h  Partitions.hpp  PartitionsUTest.cpp  PartitionsUTest.h  PartitionsUTest.hpp  PosixCall.cpp  PosixCall.h  PosixCall.hpp  SignalTraceHandler.cpp  SignalTraceHandler.hpp  Slog.hpp  StringManipulation.cpp  StringManipulation.h  StringManipulation.hpp  StringManipulationUTest.cpp  StringManipulationUTest.hpp  Time.cpp  TimeUTest.cpp  TimeUTest.hpp  exec.hpp  main-tracer.cpp
src/video/: BusManagedPipeline.cpp  BusManagedPipeline.hpp  FilePipeline.cpp  FilePipeline.hpp  MetadataHandler.cpp  MetadataHandler.hpp  StreamPipeline.cpp  StreamPipeline.hpp  VideoOutputImpl.cpp  VideoOutputImpl.hpp  gstreamer.cpp  gstreamer.hpp
